--- a/app/assets/stylesheets/spree/frontend/spree_rotating_images.css
+++ b/app/assets/stylesheets/spree/frontend/spree_rotating_images.css
@@ -2,3 +2,35 @@
 Placeholder manifest file.
 the installer will append this file to the app vendored assets here: 'vendor/assets/stylesheets/spree/frontend/all.css'
 */
+
+.rotating-images {
+  position: relative;
+  list-style: none;
+  overflow: hidden;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  }
+
+.rotating-images li {
+  -webkit-backface-visibility: hidden;
+  position: absolute;
+  display: none;
+  width: 100%;
+  left: 0;
+  top: 0;
+  }
+
+.rotating-images li:first-child {
+  position: relative;
+  display: block;
+  float: left;
+  }
+
+.rotating-images img {
+  display: block;
+  max-height: 300px;
+  float: left;
+  width: 100%;
+  border: 0;
+  }
